# swagger/swagger.yml
@@ -2,6 +2,99 @@ swagger: "2.0"
 info: {}
 basePath: v1
 paths:
+  /channel/createChannel:
+    post:
+      tags:
+      - channel
+      description: 添加平台分类
+      operationId: ChannelController.CreateChannel
+      parameters:
+      - in: body
+        name: info
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateChannelReq'
+      responses:
+        exec:
+          description: error
+        resp:
+          description: true "resp"
+          schema:
+            $ref: '#/definitions/models.CreateChannelResp'
+  /channel/createChannelUI:
+    get:
+      tags:
+      - channel
+      description: 添加平台分类UI
+      operationId: ChannelController.ChannelAddUI
+      responses:
+        exec:
+          description: error
+  /channel/modifyChannel:
+    put:
+      tags:
+      - channel
+      description: 修改渠道信息
+      operationId: ChannelController.ModifyChannel
+      parameters:
+      - in: body
+        name: info
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.ModifyChannelReq'
+      responses:
+        "200":
+          description: '"resp"'
+          schema:
+            $ref: '#/definitions/models.ModifyChannelResp'
+        exec:
+          description: error
+  /channel/queryChannelDetail/{channelId}:
+    get:
+      tags:
+      - channel
+      description: 查询渠道详情
+      operationId: ChannelController.QueryChannelDetail
+      parameters:
+      - in: path
+        name: channelId
+        description: 渠道id
+        required: true
+        type: string
+      responses:
+        exec:
+          description: error
+  /channel/queryChannelList:
+    post:
+      tags:
+      - channel
+      description: 查询渠道列表
+      operationId: ChannelController.QueryChannelList
+      parameters:
+      - in: body
+        name: req
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.QueryChannelListReq'
+      responses:
+        exec:
+          description: error
+        resp:
+          description: true "resp"
+          schema:
+            $ref: '#/definitions/models.QueryChannelListResp'
+  /channel/queryChannelListUI:
+    get:
+      tags:
+      - channel
+      description: 平台分类列表UI
+      operationId: ChannelController.QueryChannelListUI
+      responses:
+        exec:
+          description: error
   /data/queryGenderProportion:
     get:
       tags:
@@ -57,11 +150,33 @@ paths:
         exec:
           description: error
   /login/:
+    get:
+      tags:
+      - login
+      description: 登录UI
+      operationId: BLoginController.BLoginUI
+      responses:
+        exec:
+          description: error
     post:
       tags:
       - login
-      description: 登录
-      operationId: LoginController.LoginIn
+      description: 后台用户登录
+      operationId: BLoginController.BLogin
+      parameters:
+      - in: body
+        name: info
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.BLoginReq'
+      responses:
+        "200":
+          description: '"resp"'
+          schema:
+            $ref: '#/definitions/models.BLoginResp'
+        exec:
+          description: error
   /login/loginOut:
     get:
       tags:
@@ -264,6 +379,15 @@ paths:
       responses:
         exec:
           description: error
+  /songCover/bSongCoverListUI:
+    get:
+      tags:
+      - songCover
+      description: 歌单列表UI
+      operationId: BSongCoverController.BSongCoverListUI
+      responses:
+        exec:
+          description: error
   /songCover/createCollectSongCover:
     post:
       tags:
@@ -304,6 +428,26 @@ paths:
           description: true "resp"
           schema:
             $ref: '#/definitions/models.CreateCollectSongCoverResp'
+  /songCover/deleteBSongCover:
+    delete:
+      tags:
+      - songCover
+      description: 删除后台用户歌单
+      operationId: BSongCoverController.DeleteBSongCover
+      parameters:
+      - in: body
+        name: req
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.DeleteBSongCoverReq'
+      responses:
+        "200":
+          description: '"resp"'
+          schema:
+            $ref: '#/definitions/models.DeleteBSongCoverResp'
+        exec:
+          description: error
   /songCover/deleteSongCover/{songCoverId}:
     delete:
       tags:
@@ -321,6 +465,26 @@ paths:
           description: '"resp"'
           schema:
             $ref: '#/definitions/models.DeleteSongCoverResp'
+        exec:
+          description: error
+  /songCover/modifyBSongCover:
+    put:
+      tags:
+      - songCover
+      description: 修改歌单信息
+      operationId: BSongCoverController.ModifyBSongCover
+      parameters:
+      - in: body
+        name: info
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.ModifyBSongCoverReq'
+      responses:
+        "200":
+          description: '"resp"'
+          schema:
+            $ref: '#/definitions/models.resp'
         exec:
           description: error
   /songCover/modifySongCover:
@@ -361,6 +525,46 @@ paths:
         required: true
         type: string
       responses:
+        exec:
+          description: error
+  /songCover/queryBSongCoverByID/{songCoverId}/{userId}:
+    get:
+      tags:
+      - songCover
+      description: 查询歌单根据id
+      operationId: BSongCoverController.QueryBSongCoverByID
+      parameters:
+      - in: path
+        name: songCoverId
+        description: 歌单ID
+        required: true
+        type: string
+      - in: path
+        name: userId
+        description: 用户ID
+        required: true
+        type: string
+      responses:
+        exec:
+          description: error
+  /songCover/queryPageSongCoverList:
+    post:
+      tags:
+      - songCover
+      description: 查询分页歌单列表
+      operationId: BSongCoverController.QueryPageSongCoverList
+      parameters:
+      - in: body
+        name: info
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.QueryPageSongCoverListReq'
+      responses:
+        "200":
+          description: '"resp"'
+          schema:
+            $ref: '#/definitions/models.QueryPageSongCoverListResp'
         exec:
           description: error
   /songCover/querySongCoverList:
@@ -445,12 +649,41 @@ paths:
       responses:
         exec:
           description: error
+  /user/bUserListUI:
+    get:
+      tags:
+      - user
+      description: 后台用户列表UI
+      operationId: BUserController.BUserListUI
+      responses:
+        exec:
+          description: error
   /user/createUser:
     post:
       tags:
       - user
       description: 添加用户
       operationId: UserController.CreateUser
+  /user/modifyBUser:
+    put:
+      tags:
+      - user
+      description: 后台修改用户信息
+      operationId: BUserController.ModifyBUser
+      parameters:
+      - in: body
+        name: req
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.ModifyBUserReq'
+      responses:
+        exec:
+          description: error
+        resp:
+          description: true "resp"
+          schema:
+            $ref: '#/definitions/models.ModifyBUserResp'
   /user/modifyPwd:
     post:
       tags:
@@ -469,6 +702,41 @@ paths:
       - user
       description: 修改用户
       operationId: UserController.ModifyUser
+  /user/queryBUserByID/{userId}:
+    get:
+      tags:
+      - user
+      description: 查询用户根据ID
+      operationId: BUserController.ModifyBUserUI
+      parameters:
+      - in: path
+        name: userId
+        description: 用户id
+        required: true
+        type: string
+      responses:
+        exec:
+          description: error
+  /user/queryBUserList:
+    post:
+      tags:
+      - user
+      description: 查询用户列表
+      operationId: BUserController.QueryBUserList
+      parameters:
+      - in: body
+        name: info
+        description: req
+        required: true
+        schema:
+          $ref: '#/definitions/models.QueryBUserListReq'
+      responses:
+        "200":
+          description: '"resp"'
+          schema:
+            $ref: '#/definitions/models.QueryBUserListResp'
+        exec:
+          description: error
   /user/registerUI:
     get:
       tags:
@@ -482,6 +750,65 @@ paths:
       description: 用户基本信息
       operationId: UserController.UserDetailUI
 definitions:
+  models.BLoginReq:
+    title: BLoginReq
+    type: object
+    properties:
+      password:
+        type: string
+      userName:
+        type: string
+  models.BLoginResp:
+    title: BLoginResp
+    type: object
+    properties:
+      resultCode:
+        type: string
+      resultMsg:
+        type: string
+  models.BUserInfo:
+    title: BUserInfo
+    type: object
+    properties:
+      age:
+        type: integer
+        format: int64
+      birthday:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      userId:
+        type: string
+      userName:
+        type: string
+  models.ChannelInfo:
+    title: ChannelInfo
+    type: object
+    properties:
+      channelId:
+        type: string
+      channelName:
+        type: string
+      createUser:
+        type: string
+      updateTime:
+        type: string
+  models.CreateChannelReq:
+    title: CreateChannelReq
+    type: object
+    properties:
+      channelName:
+        type: string
+  models.CreateChannelResp:
+    title: CreateChannelResp
+    type: object
+    properties:
+      resultCode:
+        type: string
+      resultMsg:
+        type: string
   models.CreateCollectSongCoverReq:
     title: CreateCollectSongCoverReq
     type: object
@@ -550,6 +877,22 @@ definitions:
         type: string
       resultMsg:
         type: string
+  models.DeleteBSongCoverReq:
+    title: DeleteBSongCoverReq
+    type: object
+    properties:
+      songCoverId:
+        type: string
+      userId:
+        type: string
+  models.DeleteBSongCoverResp:
+    title: DeleteBSongCoverResp
+    type: object
+    properties:
+      resultCode:
+        type: string
+      resultMsg:
+        type: string
   models.DeleteSongCoverResp:
     title: DeleteSongCoverResp
     type: object
@@ -582,6 +925,57 @@ definitions:
         type: string
       resultMsg:
         type: string
+  models.ModifyBSongCoverReq:
+    title: ModifyBSongCoverReq
+    type: object
+    properties:
+      songCoverId:
+        type: string
+      songCoverName:
+        type: string
+      userId:
+        type: string
+  models.ModifyBUserReq:
+    title: ModifyBUserReq
+    type: object
+    properties:
+      age:
+        type: integer
+        format: int64
+      birthday:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      userId:
+        type: string
+      userName:
+        type: string
+  models.ModifyBUserResp:
+    title: ModifyBUserResp
+    type: object
+    properties:
+      resultCode:
+        type: string
+      resultMsg:
+        type: string
+  models.ModifyChannelReq:
+    title: ModifyChannelReq
+    type: object
+    properties:
+      channelId:
+        type: string
+      channelName:
+        type: string
+  models.ModifyChannelResp:
+    title: ModifyChannelResp
+    type: object
+    properties:
+      resultCode:
+        type: string
+      resultMsg:
+        type: string
   models.ModifySongCoverReq:
     title: ModifySongCoverReq
     type: object
@@ -598,18 +992,77 @@ definitions:
         type: string
       resultMsg:
         type: string
-  models.QueryChannelDetailResp:
-    title: QueryChannelDetailResp
+  models.QueryBUserListReq:
+    title: QueryBUserListReq
     type: object
     properties:
-      ChannelId:
+      age:
+        type: integer
+        format: int64
+      birthday:
         type: string
-      ChannelName:
+      curPage:
+        type: integer
+        format: int64
+      email:
         type: string
-      CreateName:
+      gender:
         type: string
-      UpdateTimeStr:
+      userName:
         type: string
+  models.QueryBUserListResp:
+    title: QueryBUserListResp
+    type: object
+    properties:
+      list:
+        type: array
+        items:
+          $ref: '#/definitions/models.BUserInfo'
+      page:
+        $ref: '#/definitions/utils.Page'
+  models.QueryChannelListReq:
+    title: QueryChannelListReq
+    type: object
+    properties:
+      channelName:
+        type: string
+      curPage:
+        type: integer
+        format: int64
+  models.QueryChannelListResp:
+    title: QueryChannelListResp
+    type: object
+    properties:
+      list:
+        type: array
+        items:
+          $ref: '#/definitions/models.ChannelInfo'
+      page:
+        $ref: '#/definitions/utils.Page'
+  models.QueryPageSongCoverListReq:
+    title: QueryPageSongCoverListReq
+    type: object
+    properties:
+      curPage:
+        type: integer
+        format: int64
+      songCoverName:
+        type: string
+      type:
+        type: integer
+        format: int64
+      userName:
+        type: string
+  models.QueryPageSongCoverListResp:
+    title: QueryPageSongCoverListResp
+    type: object
+    properties:
+      list:
+        type: array
+        items:
+          $ref: '#/definitions/models.SongCoverInfo'
+      page:
+        $ref: '#/definitions/utils.Page'
   models.QuerySongDetailResp:
     title: QuerySongDetailResp
     type: object
@@ -682,6 +1135,20 @@ definitions:
         type: string
       songPlayUrl:
         type: string
+  models.SongCoverInfo:
+    title: SongCoverInfo
+    type: object
+    properties:
+      songCoverId:
+        type: string
+      songCoverName:
+        type: string
+      type:
+        type: string
+      userId:
+        type: string
+      userName:
+        type: string
   models.SongPlayHistory:
     title: SongPlayHistory
     type: object
@@ -704,3 +1171,22 @@ definitions:
         type: string
       resultMsg:
         type: string
+  models.resp:
+    title: resp
+    type: object
+  utils.Page:
+    title: Page
+    type: object
+    properties:
+      count:
+        type: integer
+        format: int64
+      curPage:
+        type: integer
+        format: int64
+      groups:
+        type: integer
+        format: int64
+      limit:
+        type: integer
+        format: int64
